fix/comments-tickets
